# tr_news_cat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-build.sh  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
artifacts/: .gitignore  lbl_encoder.jlib.dvc  model_logistic.jlib.dvc  tfidf.jlib.dvc
data/: .gitignore  raw_data.csv.dvc  test_lbl.npy.dvc  test_tfidf.npy.dvc  test_tfidf.npz.dvc  train_lbl.npy.dvc  train_tfidf.npy.dvc  train_tfidf.npz.dvc  valid_lbl.npy.dvc  valid_tfidf.npy.dvc  valid_tfidf.npz.dvc
metrics/: metrics_logistic.json
news_cat/: config.py
news_cat/ml/: classifiers.py  clean_data.py  config.py  embedding.py
news_cat/web/: api.py  config.py  inference.py  schemas.py
scripts/: train_tfidf.py  train_tfidf_logistic.py
