[tool.poetry]
name = "news_cat"
version = "0.3.0"
description = "Turkish Text Categorization - Example for ML projects"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"
pyarrow = "^3.0.0"
scikit-learn = "^0.24.1"
spacy = "^3.0.5"
fastapi = "^0.63.0"
joblib = "^1.0.1"
gunicorn = "^20.0.4"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
dvc = {extras = ["s3", "ssh"], version = "^2.0.6"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
